--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@iconify/react": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "blob-to-buffer": "^1.2.9",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
@@ -52,6 +53,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/blob-to-buffer": "^1.2.0",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
