--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-initials-avatar": "^1.1.2",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
