--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "framer-motion": "^10.2.3",
+    "heroicons": "^2.0.18",
     "moment": "^2.29.4",
     "naija-state-local-government": "^1.1.2",
     "next": "^13.2.3",
@@ -75,7 +76,6 @@
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5"
   },
-  
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "eslint --max-warnings=0",
