--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@iconify/react": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
@@ -27,9 +28,11 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.2.3",
     "heroicons": "^2.0.18",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
     "naija-state-local-government": "^1.1.2",
     "next": "^13.2.3",
+    "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.11.0",
